--- a/galeria.html
+++ b/galeria.html
@@ -84,11 +84,11 @@
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="006AMB0HJHKKLA21S">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-6"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/006.webp);" data-target="carousel-item-6"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="007AMBGGJHGUJ6122">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-7"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/007.webp);" data-target="carousel-item-7"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="008AMB06JHYGV52AE">
@@ -108,31 +108,31 @@
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="0120MBF6JJG8UUUU8">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-12"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/012.webp);" data-target="carousel-item-12"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="0130MB36JJG8TG511">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-13"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/013.webp);" data-target="carousel-item-13"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="0140MB36JJG8KCV54">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-14"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/014.webp);" data-target="carousel-item-14"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="0150MBHJJJGRRF511">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-15"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/015.webp);" data-target="carousel-item-15"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="0160MB36JJHG57K11">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-16"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/016.webp);" data-target="carousel-item-16"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="017AMB017JHG57RFT">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-17"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/017.webp);" data-target="carousel-item-17"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
     <div class="carta-wrapper" data-pass="018AMB05H2HG57GTV">
-      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/);" data-target="carousel-item-18"></button>
+      <button class="cartaejemplo comun"  data-lazy="true" data-style="background-image: url(./assets/cartas/MINIATURAS/018.webp);" data-target="carousel-item-18"></button>
       <div class="overlay-bloqueo overnormal"></div>
     </div>
  
@@ -591,7 +591,7 @@
                         <P class="textorareza PNORMAL" > NORMAL </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/006.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
@@ -606,7 +606,7 @@
                         <P class="textorareza PNORMAL" > NORMAL </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/007.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
@@ -681,7 +681,7 @@
                         <P class="textorareza PNORMAL" > NORMAL </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" /> 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/012.webp" /> 
                          <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
@@ -696,7 +696,7 @@
                         <P class="textorareza PNORMAL" > NORMAL </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/013.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido  lazy-michi"></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
@@ -711,7 +711,7 @@
                         <P class="textorareza PNORMAL" > NORMAL </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/014.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi "></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
@@ -726,7 +726,7 @@
                         <P class="textorareza PNORMAL" > NORMAL </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/015.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido  lazy-michi"></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
@@ -741,7 +741,7 @@
                         <P class="textorareza PNORMAL" > NORMAL </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/016.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido  lazy-michi"></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
@@ -756,7 +756,7 @@
                         <P class="textorareza PNORMAL" > NORMAL </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" /> 
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/017.webp" /> 
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi"></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
@@ -771,7 +771,7 @@
                         <P class="textorareza PNORMAL" > NORMAL </P>
           <div class="tarjeta">
             <div class="carta frente" data-circle="circle4">
-              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/" />
+              <img loading="lazy" class="medio" src="assets/cartas/NORMALES/018.webp" />
            <div class="codigoqrdecarta sinQRNORMAL"> 
                   <DIV class="michiconfundido lazy-michi"></DIV>
                    <p class="TEXTOQRALERTA" > NO PUEDES COMPARTIR POR QR CARTAS NORMALES</p>
